--- a/docs/21.linux/批量结束进程.md
+++ b/docs/21.linux/批量结束进程.md
@@ -18,6 +18,9 @@ ps aux | grep -i workerman | awk '{print $2}' | xargs kill -9
 ps aux | grep start.php | awk '{print $2}' | xargs kill -9 是这样么
 
 
+
+ps aux | grep 8282 | awk '{print $2}' | xargs kill -9
+
 # workerman是否有热更新
 
 
