--- a/docs/11.java/01.java-se/02.面向对象高级/01.static关键字.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/01.static关键字.md
@@ -1,25 +1,35 @@
 
+# 关于static关键字概述
+
 static关键字，译为静态的，可用来修饰成员属性和成员方法
 
-
-
-# 成员变量
+## 成员变量
 - 类成员变量
 - 实例成员变量
 
-
+## 类成员变量
 
 类成员变量属于类本身，共享，所有实例均可访问，
 
-但在实际开发中用的场景不多。
-
-相对用的较多的是类常量成员
 
 
 ```java
 
-
 ```
+
+
+由于类成员变量可读可写权限，可被任意修改，存在不安全隐患，所以在实际开发中用的场景不多。
+相对用的较多的是类常量成员，如Math方法中的PI常量
+
+
+```java
+class two1{
+    static int num=0;
+    final static int age=10;
+}
+```
+
+
 
 # 如何引用静态成员变量
 可通过类名.成员变量的方式来引用静态成员变量，但在同一类中，包括继承中，可省略类名。
@@ -33,20 +43,132 @@ static关键字，译为静态的，可用来修饰成员属性和成员方法
 
 
 
-
+## 类成员方法
 类方法，
 类方法不依赖实例状态
 类方法仅依赖静态属性
 
-类方法的一个较为常用的场景就是工具类
+
+
+类成员方法的使用场景
+
+类成员方法的一个较为常用的场景就是工具类
+
+根据长度生成验证码
+
+```java
+class utils{
+
+    //验证码方法
+    static String captcha(int length){
+        StringBuilder str= new StringBuilder();
+        char[] chars = {'0','1','2','3','4','5','6','7','8','9','a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z','A','B','C','D','E','F','G','H','I','J','K','L','M','N','O','P','Q','R','S','T','U','V','W','X','Y','Z'};
+        for(int i=0;i<length;i++){
+            //生成随机数
+            int index = (int) (Math.random()*62);
+            str.append(chars[index]);
+        }
+        return str.toString();
+    }
+}
+```
+
+1. 关于生成随机数
+
+2. 
+
+
+
+
+
+
 
 因为静态方法属于类，而不属于对象的实例，因此不需要实例化就可以使用，且由于不需要实例化，因此可以节省内存开销。
 
 
 
 
+在不跨类（包括继承）的情况下，在访问类中的静态成员属性及静态成员方法时，可省略类名。
+
+```java
+class two1{
+    static int num=0;
+    final static int age=10;
+}
+
+class two2 extends two1{
+    two2(){
+        //访问当前类的静态属性可省略类名
+        num++;
+    }
+}
+```
 
 
+
+main方法是静态方法。
+
+
+
+# static的注意事项
+
+1. 类方法可以访问类成员，但不可以访问类实例成员
+2. 类实例方法中既可以访问类成员，也可以访问类实例成员
+3. 类实例方法可以出现this关键字，类方法中不可以出现this关键字
+
+
+# static的应用知识--代码块
+
+代码块是类的5大成分之一（成员属性，成员方法，构造方法，代码块，内部类）
+
+代码块根据是否有static关键字修饰，可分为两类
+- 静态代码块
+
+静态代码块有什么用？主要是对static属性进行初始化。
+
+
+
+
+特点，类加载时自动执行，由于类只会记载一次，所以静态代码块也只会执行一次。
+
+
+
+
+静态代码块会优先于main方法执行。
+
+
+# 静态代码块在什么时候执行 
+
+当类被第一次使用时（实例化对象，调用静态方法，调用静态属性时等等），会进行初始化
+
+- 实例代码块
+
+实例代码块和构造器一样会在类的对象实例化时被调用，但和构造器不一样的时，每次类的对象实例化时只会有一个构造器被调用，但是静态代码块都会被执行。
+
+
+
+# 单例设计模式
+
+解决的什么问题
+一个类只有一个实例对象
+
+如何处理
+私有化构造器
+有一个专门的获取实例对象的静态接口
+
+
+
+在java中需要考虑并发问题
+
+
+java如何私有化构造器
+
+
+
+
+
+
+https://blog.csdn.net/cf18435109165/article/details/106571833
 
 
 
