--- a/blog/year-2023/month12/1220.md
+++ b/blog/year-2023/month12/1220.md
@@ -1,6 +1,6 @@
 ---
-slug: welcome
-title: Welcome
+slug: welcome11
+title: Welcome11
 authors: [slorber, yangshun]
 tags: [facebook, hello, docusaurus]
 ---
