--- a/docs/11.java/01.java-se/02.面向对象高级/02.继承.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/02.继承.md
@@ -26,11 +26,31 @@ java继承性的特点
 
 
 
+
+
+
+为什么使用了extends关键字之后，子类就会继承了父类的特征呢？
+
+
+
+
+
+
 在调用方法时，存在就近优先原则，如果明确希望访问父类中的方法时，可通过super关键字来显示的调用父类中属性和方法。
 
 super关键字
 
 关于super和this关键字的区别
+
+super不是一个对象的引用
+
+
+子类构造器
+
+如果子类显示的使用super关键字来调用了父类的构造器，则super语句必须是子类构造器的第一条语句
+如果子类没有显示的调用父类的构造器，则自动的调用父类的无参构造器
+
+
 
 
 
@@ -57,3 +77,73 @@ super关键字
 
 
 为什么
+
+
+
+
+
+## 理解继承过程中方法的调用过程
+
+1. 获取候选方法，根据方法名及参数个数，获取本类及父类中有访问权限的且符合条用的方法。
+2. 根据参数的类型，确定方法，重载解析，
+3. private，static，final方法，静态绑定
+4. 
+
+
+
+
+
+
+
+# 阻止继承，final类和方法
+
+有时可能会遇到需要不允许子类覆盖的方法，可使用final关键字进行修饰，这样的方法称之为final方法。
+
+> 为了便于记忆，个人将其称之为`**只读方法**`,因为子类只有使用权限，没有操作覆盖操作权限，
+
+
+特殊的，如果类中所有方法都是final方法，可省略对方法修饰final关键字，直接对类添加final关键字进行修饰，这样的类称之为final类。
+
+> final类，是不可扩展类，为了便于记忆，个人将其称之为`太监类`，不能被继承的类
+
+
+
+汇总，类的修饰符
+
+- public/protected/default/private
+- final,
+
+
+# 强制类型转化
+
+对于类型转化在实际开发中经常会用到
+```java
+double num1=3.1415926;
+int num2=(int)num1;
+```
+这样，变量num1就被强制类型转化为了int类型
+
+
+进行强制类型转化的唯一原因是因为，需要暂时忽略对象的实际类型之后使用对象的全部功能。
+
+
+
+
+
+
+## 抽象类
+
+方法被abstract关键字进行修饰，这样的方法称之为抽象方法，抽象方法没有方法体。
+
+为了提高程序的清晰度，包含一个或多个抽象方法的类本身必须被声明为抽象类
+
+抽象类不能被实例化，因为其不完整，必须被子类完全实现其所有抽象方法，或者被子类再扩展，至到被子孙类完全实现其所有抽象方法为止，方可被实例化。
+
+
+
+## 受保护访问
+
+
+
+
+
