--- a/docs/11.java/10.设计模式/01.单例模式.md
+++ b/docs/11.java/10.设计模式/01.单例模式.md
@@ -3,5 +3,20 @@
 # 单例设计模式
 
 
+单例设计模式主要用于解决对象的实例有且只有一个的问题
+
+较为常见的比如数据库连接，window系统的任务管理器等
+
+
+具体实现分为三步，
+私有化构造器
+声明一个变量用户存储类内部所生成的实例对象
+定义一个静态方法，
+
+
+
+
+
+
 
 
