--- a/docs/11.java/01.java-se/02.面向对象高级/02.继承.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/02.继承.md
@@ -147,3 +147,38 @@ int num2=(int)num1;
 
 
 
+
+
+
+在子类的构造方法中
+
+子类的构造方法会隐式的调用父类的构造方法，且是
+
+如果子类的构造方法没有显示的调用父类的构造器，则将隐式的调用父类的无参构造器，
+
+如果父类没有无参构造器，并且子类的构造器中又没有显示的调用其他父类构造器，则编译会报错。
+
+
+
+
+抽象方法与抽象类
+
+final关键字
+
+
+Object对象
+# equal
+# hashCode
+# toString
+
+
+
+泛型数组
+
+
+
+
+super与this关键字的区别
+
+super用于调用父类中的成员属性或成员方法，而this用于调用本类实例对象的成员属性或成员方法。
+
