--- a/docs/11.java/01.java-se/02.面向对象高级/内部类.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/内部类.md
@@ -29,3 +29,97 @@ new ArrayList<>[100];
 new Empoyee[100];
 
 数组列表的容量与数组的大小有一个非常重要的区别，
+
+
+
+# 内部类
+
+所谓的内部类是指在一个类的顶部定义一个类
+
+为什么要使用内部类
+- 为了向同包的其他类隐藏类的实现。
+- 可以访问外部类的所有成员属性和成员方法
+
+
+根据内部类的类中的定义位置不同，分为一下两种形式
+- 成员内部类
+- 局部内部类
+
+
+
+## 成员内部类
+成员内部类具有成员与类的双重特征，
+
+可以被static关键字修饰的类，一定是成员内部类
+
+
+## 局部内部类
+
+局部内部类是定义在类的方法中的内部类
+
+
+
+局部内部类的特点
+- 不能被public,protected访问所修饰
+- 仅能被所在方法访问
+
+
+可以访问所在方法中的局部变量以及所在外部类中的成员属性。
+
+声明局部类时不能有访问说明符，
+
+
+
+# 匿名内部类
+匿名内部类是特殊的局部内部类，定义在类的方法中
+
+
+继承/实现接口，方法重写，实例化对象的合并操作的语法糖。
+
+
+
+# 静态内部类
+
+仅能访问静态成员属性和静态成员方法。
+
+
+
+
+
+
+
+
+
+
+
+创建内部类对象
+```java
+
+
+```
+
+
+
+内部类作为类的五大成员之一，可以有修饰符
+
+被private修饰的内部类，
+静态成员内部类
+
+
+
+
+
+
+
+扩展
+
+成员内部类也属于类的五大成员之一，
+成员属性
+成员方法
+内部类
+构造方法
+代码块
+
+
+
+
