--- a/docs/11.java/01.java-se/02.面向对象高级/内部类.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/内部类.md
@@ -16,17 +16,22 @@ trimToSize,将存储块的大小调整为保存当前元素数量所需要的存
 
 
 数组列表的访问与修改
+
+```java
 set(index,value),
 get(index),
-
+```
 
 
 
 
 
 分配数组列表
+
+```java
 new ArrayList<>[100];
 new Empoyee[100];
+```
 
 数组列表的容量与数组的大小有一个非常重要的区别，
 
