--- a/docs/11.java/01.java-se/02.面向对象高级/泛型数组.md
+++ b/docs/11.java/01.java-se/02.面向对象高级/泛型数组.md
@@ -38,8 +38,9 @@ ArrayList在java.util.arrayList包中
 
 # 声明数组列表
 
+```java
 ArrayList<Object> item = new ArrayList<Object>();
-
+```
 
 
 在java10中，最好使用var关键字以避免重复写类名。
