--- a/docs/11.java/10.算法与数据结构/01.排序算法.md
+++ b/docs/11.java/10.算法与数据结构/01.排序算法.md
@@ -55,6 +55,41 @@ public class demo01 {
 ```
 
 
+## 选择排序
+
+假定第一个元素，最大或者最小，
+拿该值与数组中的其他元素进行比较，找到比该值更大或者更小的元素的索引，每次循环结束，找到这样的值，进行交换一次，
+一次循环到结束。
+
+
+交换一次，
+
+
+```java
+public class demo03 {
+    public static void main(String[] args) {
+        var nums=new int[]{1,22,43,78,32,179,45,98,41};
+        for (int i = 0; i < nums.length; i++) {
+            var min=i;
+            for (int j = i+1; j < nums.length; j++) {
+                if(nums[j]<nums[min]){
+                    min=j;
+                }
+            }
+
+            if(min!=i){
+                var temp = nums[i];
+                nums[i]=nums[min];
+                nums[min]=temp;
+            }
+        }
+        System.out.println(Arrays.toString(nums));
+    }
+}
+```
+
+注意选择排序和冒泡排序的区别：
+两者
 
 
 ## 附录1:关于位运算补课
