--- a/docs/11.java/10.算法与数据结构/01.排序算法.md
+++ b/docs/11.java/10.算法与数据结构/01.排序算法.md
@@ -92,6 +92,49 @@ public class demo03 {
 两者
 
 
+## 插入排序
+
+```java
+public class demo04 {
+    public static void main(String[] args) {
+        var nums=new int[]{1,78,22,43,32,179,45,98,41};
+
+        for (int i = 1; i < nums.length; i++) {
+            if(nums[i]<nums[0]){
+                var temp = nums[0];
+                nums[0] = nums[i];
+                nums[i] = temp;
+
+
+                System.out.println("three");
+            }else if(nums[i]<nums[i-1]){
+                var max=i-1;
+                for (int j = i-1;j>0; j--) {
+                    if(nums[i]>nums[j-1] && nums[i]<nums[j]){
+
+
+                        max=j;
+                        break;
+                    }
+                }
+
+                if(max!=i){
+                    var temp = nums[i];
+                    nums[i] = nums[max];
+                    nums[max] = temp;
+                    System.out.println("i--one--"+i+"max-"+max+"--"+nums[i]);
+                }
+            }else{
+                System.out.println("two--i"+nums[i]+"--i-1:"+nums[i-1]);
+                continue;
+            }
+            System.out.println("i:"+i+"---"+Arrays.toString(nums));
+        }
+        System.out.println(Arrays.toString(nums));
+    }
+}
+```
+
 ## 附录1:关于位运算补课
 
 符号位共同参与运算的运算,按位运算是半加法，不进位的，
