--- a/blog/2023/12/1220.md
+++ b/blog/2023/12/1220.md
@@ -1,8 +1,6 @@
 ---
-slug: welcome11
-title: Welcome11
-authors: [slorber, yangshun]
-tags: [facebook, hello, docusaurus]
+slug: welcome111
+title: java面向对象基础
 ---
 
 # 学习目标
