--- a/docs/02.js&ts/uniapp/常见问题.md
+++ b/docs/02.js&ts/uniapp/常见问题.md
@@ -18,5 +18,4 @@
  
  
  
- 1. Invalid prop: type check failed for prop "value". Expected String with value "3", got Number with value 3. 
- 
+无法安装此app,因为无法验证其完整性 解决方案
