--- a/docs/02.js&ts/01.es5/函数.md
+++ b/docs/02.js&ts/01.es5/函数.md
@@ -1,14 +1,32 @@
-# 函数的定义
-## 函数的表达式
-
-## 箭头函数
-
-
-构造函数
+# js之函数
 
 
 
-匿名函数
+## 函数的定义
+
+在js中，函数有三种定义形式，分别是
+- 函数声明
+- 函数表达式
+- 箭头函数
+
+### 函数声明
+
+### 函数
+
+### 箭头函数
+
+
+
+
+
+## 构造函数
+
+
+
+## 匿名函数
+
+
+
 
 函数的柯里化
 
