--- a/docs/11.java/10.算法与数据结构/01.排序算法.md
+++ b/docs/11.java/10.算法与数据结构/01.排序算法.md
@@ -95,45 +95,36 @@ public class demo03 {
 ## 插入排序
 
 ```java
-public class demo04 {
+public class demo05 {
     public static void main(String[] args) {
         var nums=new int[]{1,78,22,43,32,179,45,98,41};
-
         for (int i = 1; i < nums.length; i++) {
-            if(nums[i]<nums[0]){
-                var temp = nums[0];
-                nums[0] = nums[i];
-                nums[i] = temp;
-
-
-                System.out.println("three");
-            }else if(nums[i]<nums[i-1]){
-                var max=i-1;
-                for (int j = i-1;j>0; j--) {
-                    if(nums[i]>nums[j-1] && nums[i]<nums[j]){
-
-
-                        max=j;
-                        break;
-                    }
+            var index=i;
+            for (int j = 0; j<i; j++) {
+                if(nums[j]>nums[index]){
+                    index=j;
+                    break;
                 }
-
-                if(max!=i){
-                    var temp = nums[i];
-                    nums[i] = nums[max];
-                    nums[max] = temp;
-                    System.out.println("i--one--"+i+"max-"+max+"--"+nums[i]);
-                }
-            }else{
-                System.out.println("two--i"+nums[i]+"--i-1:"+nums[i-1]);
-                continue;
             }
-            System.out.println("i:"+i+"---"+Arrays.toString(nums));
+
+            if(index<i){
+                var min = nums[i];
+                for (int j = i; j>index; j--) {
+                    nums[j] = nums[j-1];
+                }
+                nums[index]=min;
+            }
+            System.out.println("i:"+i+"---"+ Arrays.toString(nums));
         }
         System.out.println(Arrays.toString(nums));
     }
 }
 ```
+
+个人初学Java，可能逻辑考虑的还不够全面，代码也不够简介，随着学习的深入，再后续优化把。
+
+
+
 
 ## 附录1:关于位运算补课
 
