--- a/blog/2024/01/0107.md
+++ b/blog/2024/01/0107.md
@@ -1,11 +1,11 @@
 ---
-slug: we1lcome112
-title: We1lcome113
-authors: [slorber, yangshun]
-tags: [facebook, hello, docusaurus]
+slug: 20240107
+title: 2024-01-07--hello one
 ---
 
 # 学习目标
+
+
 java面向对象基础
 
 final关键字
