--- a/docs/11.java/01.java-se/09.集合/05.map.md
+++ b/docs/11.java/01.java-se/09.集合/05.map.md
@@ -174,6 +174,20 @@ public class demo04 {
 
 
 
+## 关于集合的排序
+
+根据key的排序
+
+根据value排序
+
+如果需要根据value对hashmap进行排序，
+
+```java
+
+```
+
+
+
 
 ## 弱散列映射
 
