--- a/学习目标/year-2024/新工作.md
+++ b/学习目标/year-2024/新工作.md
@@ -1,5 +1,14 @@
 
 
+真的是细思极恐，从-----
+
+21年，我大半年没有工作，炒股还赔了不少，
+22年，在玩得如是又没有发工资，我这是怎么了？
+-----
+我不努力，如何守护我的婚姻，如何守护李琦，如何保证不让我爸妈伤心难过。
+
+
+
 java，go，js，
 
 
@@ -16,4 +25,28 @@ react
 linux，
 nginx
 docker
+
+
+
+如果创业，我最想做什么
+
+在线知识库管理，
+pdf在线查看，思维导图，博客管理
+
+
+
+# 努力拼搏三个月，实现7k
+java,go,js,ts,vue,react,rhce证书
+
+应该对当前这份工作，有一个明确的认知，虽然不那么如意，但是没有又不行，不管咋样，干到四五月分。
+
+一月低，javase基础学习完，vue后台管理系统完毕，react教程完毕。
+
+三月rhce证书。
+
+数据结构，项目，
+二月低，javase基础学习完，vue后台管理系统完毕，react教程完毕。
+
+
+如果年底不能完成这些目标，我的计算机职业生涯就到此结束了。
 
