--- a/docs/11.java/01.java-se/10.io流/05.map.md
+++ b/docs/11.java/01.java-se/10.io流/05.map.md
@@ -1,242 +1,100 @@
 
 
 
-# map系列key/value集合
+# 打印流
 
-map系列接口是key/value类型的集合，其特点是无序，无索引，key不可重复，value无所谓。
+在整个io包中，打印流是输出信息最方便的类，主要包含字节打印流--printStram和字节打印流--printwrite
 
 
-- put,
-- putall,
-- putIfAbsent,如果
-- get
-- getOrDefault(),根据key获取值，如果可以不存在，则默认值。
-- merge
-- size，获取集合中元素的个数
-- isEmpty,
-- clear,
-- containsKey,判断key是否存在
-- containsvalue，判断value是否存在。
-- sort,排序规则
+字节打印流
+
+字符打印流--printwrite
+
+构造方法
+printwrite(outputstream,file,string),
 
 
 
 
-
-## 关于集合的遍历
-
-```java
-public class demo01 {
-    public static void main(String[] args) {
-
-        var students = new HashMap<String,Integer>();
-
-        students.put("刘备",60);
-        students.put("关羽",62);
-        students.put("张飞",45);
-
-        System.out.println(students);
-
-        //根据key获取值
-        System.out.println(students.get("刘备"));
-        System.out.println(students.get("曹操"));
-        System.out.println(students.getOrDefault("曹操",0));
-
-        students.putIfAbsent("one",10);
-        students.putIfAbsent("one",20);
-        System.out.println(students);
-
-        //判断key是否存在
-        System.out.println(students.containsKey("关羽"));
-        System.out.println(students.remove("关羽"));
-        System.out.println(students);
-        System.out.println(students.size());
-
-
-        //集合的遍历
-        students.forEach((key,value)->{
-            System.out.println("姓名："+key+",成绩："+value);
-        });
-    }
-}
-```
-
-
-
-
-## 映射视图
-
-什么是映射视图，
-
-有以下三种映射视图
-- 键集，keySet,
-- 值集，values,
-- 键值对集，entrySet
-
-
-keySet是非hastset和treeset对象，实现了set接口的特殊类的对象，因此可以使用遍历
+常用方法
+println,
+write,
+append，
 
 ```java
 public class demo02 {
-  public static void main(String[] args) {
-    var scores = new HashMap<String,Integer>();
-
-    scores.put("刘备",60);
-    scores.put("关羽",62);
-    scores.put("张飞",45);
-
-    System.out.println(scores);
-
-    //key映射视图
-    System.out.println("=====key映射视图=====");
-    for (String key : scores.keySet()) {
-      System.out.println("学生姓名:"+key+",成绩："+scores.get(key));
-    }
-
-    //value映射视图
-    System.out.println("=====value映射视图=====");
-    for (Integer value : scores.values()) {
-      System.out.println(value);
-    }
-
-    System.out.println("=====key/value映射视图=====");
-    for (Map.Entry<String, Integer> entry : scores.entrySet()) {
-      System.out.println("学生姓名："+entry.getKey()+"，成绩："+entry.getValue());
-    }
-  }
-}
-```
-
-:::tip
-可以使用var声明避免笨拙的Map.Entry<key,value>
-:::
-
-```java
-for (var entry : scores.entrySet()) {
-  System.out.println("学生姓名："+entry.getKey()+"，成绩："+entry.getValue());
-}
-```
-
-
-- getKey,返回映射条目的键
-- getValue,返回映射条目的值
-- setValue,将相关映射中的值改为新值，并返回原来的值
-
-
-:::tip
-1. 无论键集，还是值集，迭代器的remove方法，实际上会从映射中删除对应的键值对
-2. 不能向键集中添加元素。
-:::
-
-
-
-
-## map映射的遍历方式
-
-方法1，
-
-方法2
-
-方法3
-
-
-```java
-public class demo04 {
     public static void main(String[] args) {
-        var nums = new HashMap<String,Integer>();
+        var filepath = "./java-se03/src/lesson158/1.txt";
 
-        nums.put("one",10);
-        nums.put("two",20);
-        nums.put("three",30);
+        try (
+                var pw = new PrintWriter(filepath);
+        ){
+            //pw.println("hello world1");
+            pw.println("hello world2");
 
-        System.out.println("方法1.通过keyset遍历");
-        for (var key : nums.keySet()) {
-            System.out.println(key+"--"+nums.get(key));
+            pw.append("hello world--one");
+            pw.write("hello world--two");
+        } catch (FileNotFoundException e) {
+            throw new RuntimeException(e);
         }
-
-        System.out.println("方法2.通过entrySet遍历");
-        for (var entry : nums.entrySet()) {
-            System.out.println(entry.getKey()+"--"+entry.getValue());
-        }
-
-        System.out.println("方法3.通过forEach遍历");
-        nums.forEach((key,value)->{
-            System.out.println(key+"--"+value);
-        });
     }
 }
 ```
 
-源码分析，forEach方法就是对entrySet()的封装
+如果需要追加打印怎么办，就有必要file，
 ```java
+public class demo03 {
+    public static void main(String[] args) {
+        var filepath = "./java-se03/src/lesson158/1.txt";
 
+        try (
+                var pw = new PrintWriter(new FileOutputStream(filepath,true));
+        ){
+            //pw.println("hello world1");
+            pw.println("hello world2");
+
+            pw.append("hello world--one");
+            pw.write("hello world--two");
+        } catch (FileNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+    }
+}
 ```
 
 
 
-## 关于集合的排序
 
-根据key的排序
 
-根据value排序
-
-如果需要根据value对hashmap进行排序，
-
+wtite和append有什么区别？
 ```java
+public PrintWriter append(CharSequence csq) {
+	write(String.valueOf(csq));
+	return this;
+}
+
+
+public void write(String s) {
+    write(s, 0, s.length());
+}
+
 
 ```
 
+打印流的应用--输出语句的重定向
 
-
-
-## 弱散列映射
-
-
-
-
-## 链接散列集与映射
-
-## 枚举集与映射
-
-## 标识散列与映射
-
-
-
-
-java语言规范将派生于error类或runtimeException类的所有异常成为非检查型异常，其他的异常成为检查型异常
+要求将日志输出到文件并且根据日期命名
 
 
 
 
 
-# map系列key-value集合
-
-hash是什么？
-
-
-hashMap和treeMap
-
-两者如何选择？散列稍微快一些，如果没有按照有序访问键的需求，最好还是选择hashmap
+缓冲流与打印流的区别
 
 
 
-//添加值
-
-put,，向集合中添加key-value,如果key已经存在，则会覆盖原有值。
-get,通过key获取value，如果key不存在，则返回null，但这通常并不友好，如果key不存在希望为其设定个默认值，则可以使用getOrDefault(key,default)
-
-size,获取集合中元素的个数
-containsKey,判断key是否存在，
-containsValue,判断value是否存在
-remove,根据key移除元素，
-clear,清空集合中的所有元素
 
 
 
-如何遍历集合，
-forEach,
 
 
-putIfAbsent,如果
-
-不过还可以做的更好，merge非法可以简化这个常见操作。
