--- a/学习目标/year-2024/新工作.md
+++ b/学习目标/year-2024/新工作.md
@@ -50,3 +50,10 @@ java,go,js,ts,vue,react,rhce证书
 
 如果年底不能完成这些目标，我的计算机职业生涯就到此结束了。
 
+
+
+
+
+this[kHandle] = new _Hash(algorithm, xofLen);
+
+SET NODE_OPTIONS=--openssl-legacy-provider
