--- a/docs/11.java/01.java-se/11.多线程/00.intro.md
+++ b/docs/11.java/01.java-se/11.多线程/00.intro.md
@@ -49,9 +49,34 @@ class one extends Thread{
 ```
 
 
+创建任务对象
+
+
+
 
 
 线程的状态
 
 线程可以有如下6种状态
+
+- 
+- 可运行
+- 等待
+- 阻塞
+- 终止线程
+
+
+线程属性
+
+线程
+
+
+
+
+
+
+同步
+
+
+线程安全的集合
 
