--- a/docs/11.java/01.java-se/11.多线程/00.intro.md
+++ b/docs/11.java/01.java-se/11.多线程/00.intro.md
@@ -50,8 +50,55 @@ class one extends Thread{
 
 
 
+## 获取线程的执行结果
+callable,
+
+
+未来任务对象，是
+
+
+
+
+
 
 线程的状态
 
 线程可以有如下6种状态
+
+
+
+
+是否设置了中断状态，
+Thread.currentThread()，获得当前线程
+isInterrupted(),
+
+
+
+interrupt，向线程发送中断请求，线程的终端状态将被设置为true
+
+interrupted，测试当前线程是否被中断
+
+这是一个静态方法，调用有一个副作用--会将当前线程的中断状态重置为false
+
+isInterrupted,测试线程是否被中断，与static interrupted方法不同，该方法是实例方法，调用该方法不会改变线程的中断状态。
+
+
+currentThread,返回当前正在执行的线程的thread对象。
+
+
+
+
+守护线程
+setDaemon(true)
+
+
+这一方法必须在线程启动之前启动。
+
+> 守护线程的唯一用途是为其他线程提供服务的，
+
+
+
+当只剩下守护线程时，虚拟机就会退出。
+
+
 
