--- a/docs/11.java/01.java-se/11.多线程/02.collections.md
+++ b/docs/11.java/01.java-se/11.多线程/02.collections.md
@@ -1,101 +1,17 @@
 
-# collections工具类
-
-
-## addAll，批量添加元素
-
-
-```java
-public static <T> boolean addAll(Collection<? super T> c, T... elements) {
-	boolean result = false;
-	for (T element : elements)
-		result |= c.add(element);
-	return result;
-}
-```
-
-`result |= c.add(element)`是什么含义?
-
-
-## shuffle
-
-
-## sort，排序
+## 如何实现线程
+1. 继承thread类
+2. 实现runable接口
+3. callable接口
 
 
 
+callable接口和futureTask实现具有返回值的线程
 
-## max/min,求集合最值
+callable的两种执行方法
+1. 借助futuretask执行
 
-
-## swap
-
-swap,根据索引，交换集合中的两元素的值
-有了swap，自己是不是也可以实现shuffle，打乱集合元素的方法了？
-
-```java
-var length = nums.size();
-var random  = new Random();
-for (int i = 0; i < length; i++) {
-	var num = random.nextInt(length);
-	if(num!=i){
-		Collections.swap(nums,i,num);
-	}
-}
-
-System.out.println("自定义shuffle的遍历结果");
-for (var num : nums) {
-	System.out.println(num);
-}
-```
-
-
-
-
-其实如果查看jdk源码会发现，shuffle本身也是借助swap方法来实现的,只是官方的实现，考虑更加周全。
-```java
-public static void shuffle(List<?> list, Random rnd) {
-	int size = list.size();
-	//这里是什么含义?
-	if (size < SHUFFLE_THRESHOLD || list instanceof RandomAccess) {
-		for (int i=size; i>1; i--)
-			swap(list, i-1, rnd.nextInt(i));
-	} else {
-		Object[] arr = list.toArray();
-
-		// Shuffle array
-		for (int i=size; i>1; i--)
-			swap(arr, i-1, rnd.nextInt(i));
-
-		// Dump array back into list
-		// instead of using a raw type here, it's possible to capture
-		// the wildcard but it will require a call to a supplementary
-		// private method
-		ListIterator it = list.listIterator();
-		for (Object e : arr) {
-			it.next();
-			it.set(e);
-		}
-	}
-}
-```
-
-THRESHOLD,翻译为门槛，
-RandomAccess是一个标记接口，官方解释是只要List实现这个接口，就能支持快速随机访问。而什么是随机访问呢？接下来我们来举例说明。
-
-
-> 实现RandomAccess接口的List可以通过for循环来遍历数据比使用iterator遍历数据更高效，未实现RandomAccess接口的List可以通过iterator遍历数据比使用for循环来遍历数据更高效。
-
-
-
-
-## reverse，反转集合中的元素
-
-```java
-
-
-output:
-```
+2. 借助线程池来执行
 
 
 
@@ -105,5 +21,62 @@ output:
 
 
 
+# 线程方法
+
+- start，使该线程开始运行
+- setname,改变线程名称
+- setPriority，更改线程的优先级，1-10，默认值为5
+- setDaemon，设置为守护进程
+- join，等待该线程终止的时间最长毫秒数
+- interrupt，中断线程，
+- isAlive,测试线程是否处于活动状态
+
+
+thread静态方法
+yield，暂停当前正在执行的线程对象，并执行其他线程
+sleep，在执行的毫秒数内让当前正在执行的线程休眠
+currentThread，返回对当前正在执行的线程对象的引用
+dumpStack，将当前线程的堆栈跟踪打印至标准错误流。
+
+
+
+
+
+
+## sleep，
+
+如何保障线程的执行顺序，
+
+
+
+
+
+
+
+## 中断线程，
+
+如果线程需要执行一个长时间的任务，可能需要能中断线程。
+
+中断线程，就是其他线程给该线程发送一个信号，该新城收到信号后执行run方法，使得自身线程能立刻结束运行。
+
+中断信号--interrupt，
+
+判断是否中断，isInterrupted,interrupted,
+
+
+
+
+
+
+
+
+
+
+
+
+关于线程
+
+future
+futureTask
 
 
