--- a/docs/11.java/01.java-se/12.网络编程/02.collections.md
+++ b/docs/11.java/01.java-se/12.网络编程/02.collections.md
@@ -1,109 +1,90 @@
 
-# collections工具类
+# 网络通讯
 
 
-## addAll，批量添加元素
+ip，
+端口，
+协议，
 
 
+
+internet address,inetaddress
+
+
+inetaddress，没有构造方法，不可实例化
+
+可通过调用getName方法获取inetAddress对象，getName方法可接受ip或者域名
 ```java
-public static <T> boolean addAll(Collection<? super T> c, T... elements) {
-	boolean result = false;
-	for (T element : elements)
-		result |= c.add(element);
-	return result;
-}
-```
 
-`result |= c.add(element)`是什么含义?
-
-
-## shuffle
-
-
-## sort，排序
-
-
-
-
-## max/min,求集合最值
-
-
-## swap
-
-swap,根据索引，交换集合中的两元素的值
-有了swap，自己是不是也可以实现shuffle，打乱集合元素的方法了？
-
-```java
-var length = nums.size();
-var random  = new Random();
-for (int i = 0; i < length; i++) {
-	var num = random.nextInt(length);
-	if(num!=i){
-		Collections.swap(nums,i,num);
-	}
-}
-
-System.out.println("自定义shuffle的遍历结果");
-for (var num : nums) {
-	System.out.println(num);
-}
 ```
 
 
 
 
-其实如果查看jdk源码会发现，shuffle本身也是借助swap方法来实现的,只是官方的实现，考虑更加周全。
 ```java
-public static void shuffle(List<?> list, Random rnd) {
-	int size = list.size();
-	//这里是什么含义?
-	if (size < SHUFFLE_THRESHOLD || list instanceof RandomAccess) {
-		for (int i=size; i>1; i--)
-			swap(list, i-1, rnd.nextInt(i));
-	} else {
-		Object[] arr = list.toArray();
+//server端
+public class server {
+    public static void main(String[] args) throws IOException {
+        //创建一个负责监控9013端口的服务器
+        var socketserver = new ServerSocket(9013);
+        //告诉程序不停的等待，至到有客户连接到这个端口
+        var threadpoolexecutor = new ThreadPoolExecutor(3,5,20, TimeUnit.SECONDS,new ArrayBlockingQueue<>(4), Executors.defaultThreadFactory(),new ThreadPoolExecutor.CallerRunsPolicy());
 
-		// Shuffle array
-		for (int i=size; i>1; i--)
-			swap(arr, i-1, rnd.nextInt(i));
+        while(true){
+            var socket = socketserver.accept();
+            threadpoolexecutor.execute(()->{
+                InputStream is = null;
+                try {
+                    is = socket.getInputStream();
+                } catch (IOException e) {
+                    throw new RuntimeException(e);
+                }
+                var dis = new DataInputStream(is);
 
-		// Dump array back into list
-		// instead of using a raw type here, it's possible to capture
-		// the wildcard but it will require a call to a supplementary
-		// private method
-		ListIterator it = list.listIterator();
-		for (Object e : arr) {
-			it.next();
-			it.set(e);
-		}
-	}
+                while (true){
+                    String msg = null;
+                    try {
+                        msg = dis.readUTF();
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                    System.out.println(msg);
+                }
+            });
+        }
+    }
+}
+
+//client端
+public class client {
+    public static void main(String[] args) throws IOException {
+        var socketclient = new Socket("127.0.0.1",9013);
+
+        //从通讯管道中得到一个字节输出流，用来发送数据
+        var sos = socketclient.getOutputStream();
+        var dos = new DataOutputStream(sos);
+
+        var sc = new Scanner(System.in);
+        while(true){
+            System.out.println("请输入要发送的内容:");
+            var msg = sc.nextLine();
+
+            if("exit".equals(msg)){
+                dos.close();
+                socketclient.close();
+                System.out.println("good byb");
+                break;
+            }
+            dos.writeUTF(msg);
+            dos.flush();
+        }
+    }
 }
 ```
 
-THRESHOLD,翻译为门槛，
-RandomAccess是一个标记接口，官方解释是只要List实现这个接口，就能支持快速随机访问。而什么是随机访问呢？接下来我们来举例说明。
-
-
-> 实现RandomAccess接口的List可以通过for循环来遍历数据比使用iterator遍历数据更高效，未实现RandomAccess接口的List可以通过iterator遍历数据比使用for循环来遍历数据更高效。
+还是存在问题，线程会被一直占用，至到断开。
 
 
 
-
-## reverse，反转集合中的元素
-
-```java
-
-
-output:
-```
-
-
-
-
-
-
-
-
-
-
-
+equals，变量与常量比较时，吧常量放在前还是变量在前？
+常量，
