--- a/docs/02.js&ts/01.es5/05.引用类型/数组/01.引用类型-date对象.md
+++ b/docs/02.js&ts/01.es5/05.引用类型/数组/01.引用类型-date对象.md
@@ -26,3 +26,28 @@ some,
 
 
 那些数组方法会修改原数组，那些
+some，
+
+
+
+
+push,pop,splice,也会更新数组的length属性。
+
+减少length属性会删除元素。
+
+
+
+## 会修改原数组的方法，以及对应的非修改方法
+
+|修改方法|功能描述|非修改方法|
+|-------|--------------|------------------|
+|copyWithin||-|
+|fill||-|
+|push|向数组尾部压入新的元素||
+|pop|从数组尾部弹出元素||
+|shift|||
+|unshift|||
+|sort|||
+|splice|||
+|reverse|||
+
