--- a/docs/11.go/15.常用库/02.time.md
+++ b/docs/11.go/15.常用库/02.time.md
@@ -1,19 +1,25 @@
 ---
+title: time库
 sidebar_position: 3
 ---
 
-# time库
+关于时间必须了解的几个基础知识
 
-
-关于时间必须
-
-基础知识
-
-utc,
-时区,
+1. utc,
+2. 时区,
+3. 时间戳
 
 
 在go语言中,关于时间日期的相关操作在time包中,
+
+
+## Now
+
+add,
+
+
+
+
 
 - Now(),返回一个time类型的本地时间,如`2024-05-05 23:45:40.3301309 +0800 CST m=+0.001499601`,通常来说,并不是我们需要的,
 
@@ -123,6 +129,7 @@ func main() {
 - Date:获取当前日期是一年,月份,一月中的第几天,返回值:year,month,day
 - Day:获取当前日期是一月中的第几天,返回值:int
 - WeekDay:获取一周中的第几天,返回值:string
+- YearDay:获取一年中的第几天，返回值int类型
 - hour:获取小时,返回值:int
 - minute:获取分钟,返回值:int
 - second:获取秒数,返回值:int
@@ -161,4 +168,10 @@ func (t Time) Date() (year int, month Month, day int) {
 
 
 
+
+
+
+## 附录1，模块源码分析，
+
+> 只有站在巨人的肩膀上才能看的更远。
 
