--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -9,5 +9,23 @@ sidebar_position: 3
 ## 文件读写
 
 
+```go
+func main() {
+	// contents := os.ReadFile("./1.txt")
+	root, _ := os.Getwd()
+	fmt.Println(root)
+	// bytes, _ := ioutil.ReadFile(root + "/0506/02.os/1.txt")
+	filepath := root + "/0506/02.os/1.txt"
+	bytes, err := os.ReadFile(filepath)
+	if err != nil {
+		fmt.Println(err)
+	}
+	fmt.Println(string(bytes))
+
+}
+```
+
+ReadFile其实就是对openfile的封装而已，看一下大神的写法和自己的写法有什么区别？
+
 ## 文件上传
 
