--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -5,8 +5,133 @@ sidebar_position: 3
 # os库
 
 
+- os.OpenFile方法,可读可写
+
+func OpenFile(name string, flag int, perm FileMode) (*File, error) 
+
+参数说明
+name string, 
+flag int, 
+perm FileMode
+
+
+
+返回值说明
+file,文件对象
+err,错误信息
+
+
+- os.Open,是对os.OpenFile方法的封装,仅用于读取文件
+
+
+
+一次读取指定的字节
+
+
+一行模式读
+
+一次读取指定的字节
+
+
+
+去除空格
+
+
+
 
 ## 文件读写
+
+
+```go
+func demo1(root string) {
+	filepath := root + "/back/0507/readme.md"
+	file, err := os.Open(filepath)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	defer file.Close()
+
+	var buffer []byte
+	var buf = make([]byte, 1024)
+	for {
+		count, err := file.Read(buf)
+		if err == io.EOF {
+			break
+		} else if err != nil {
+			fmt.Println(err)
+			return
+		}
+		// fmt.Println(count, buf)
+		buffer = append(buffer, buf[:count]...)
+	}
+	fmt.Println(string(buffer))
+}
+```
+
+
+```go
+func main() {
+	root, _ := os.Getwd()
+	filepath := root + "/back/0507/readme.md"
+	contents, err := os.ReadFile(filepath)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	fmt.Println(string(contents))
+}
+```
+
+
+
+```go
+func ReadFile(name string) ([]byte, error) {
+	f, err := Open(name)
+	if err != nil {
+		return nil, err
+	}
+	defer f.Close()
+
+	var size int
+	if info, err := f.Stat(); err == nil {
+		size64 := info.Size()
+		if int64(int(size64)) == size64 {
+			size = int(size64)
+		}
+	}
+	size++ // one byte for final read at EOF
+
+	// If a file claims a small size, read at least 512 bytes.
+	// In particular, files in Linux's /proc claim size 0 but
+	// then do not work right if read in small pieces,
+	// so an initial read of 1 byte would not work correctly.
+	if size < 512 {
+		size = 512
+	}
+
+	data := make([]byte, 0, size)
+	for {
+		if len(data) >= cap(data) {
+			d := append(data[:cap(data)], 0)
+			data = d[:len(data)]
+		}
+		n, err := f.Read(data[len(data):cap(data)])
+		data = data[:len(data)+n]
+		if err != nil {
+			if err == io.EOF {
+				err = nil
+			}
+			return data, err
+		}
+	}
+}
+```
+
+
+
+
+
 
 
 ```go
@@ -28,4 +153,42 @@ func main() {
 ReadFile其实就是对openfile的封装而已，看一下大神的写法和自己的写法有什么区别？
 
 ## 文件上传
+
+
+
+
+数组与切片
+数组是具有
+
+切片与数组的区别
+数组是固定容量的,而切片允许动态扩容.
+
+
+
+
+
+
+
+
+## 数组
+var nums []int
+
+
+:::note
+需要特别注意的是,在go语言中,数组是值类型
+
+值类型意味着,在其变量赋值时,作为参数传递时,都将产生一次复制动作.
+
+:::
+
+1. 数组元素的访问
+
+> 通过下标来访问数组元素,但是值得注意的是数组的下标是从0开始的.
+
+
+
+数组切片
+
+切片的三大属性--指针,长度和容量
+
 
