--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -12,7 +12,17 @@ sidebar_position: 3
 
 ## 常用方法
 
-os.create,创建文件
+### 1. os.create,创建文件
+
+
+
+经查看源码，create方法其实就是对OpenFile方法的封装而已。
+```go
+
+```
+
+
+
 os.create,创建文件
 
 
