--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -221,3 +221,45 @@ var nums []int
 切片的三大属性--指针,长度和容量
 
 
+## bufio
+
+io.Reader接口和io.writer接口
+
+什么是缓冲io
+bufio是一种允许以块的形式读取和写入的技术
+
+创建缓冲读取器，
+
+```go
+func main(){
+	workdir, _ := os.Getwd()
+	filepath := workdir + "/module6/lesson071/1.txt"
+
+	file, err := os.Open(filepath)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	defer file.Close()
+
+	var contents []byte
+	buf := make([]byte, 128)
+	reader := bufio.NewReader(file)
+
+	nums, err := reader.Read(buf)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	contents = append(contents, buf[:nums]...)
+	fmt.Println(string(contents))
+}
+```
+
+https://www.kelche.co/blog/go/golang-bufio/
+
+bufio与io的区别
+bufio以块的形式读取或写入数据，
+普通的io一次读取或写入一个字节的数据，
+
+https://books.studygolang.com/The-Golang-Standard-Library-by-Example/chapter01/01.4.html
