--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -5,14 +5,30 @@ sidebar_position: 3
 
 ## os库概述
 
-
-
-
-
-
 ## 常用方法
 
-os.create,创建文件
+- 1. os.create,创建文件
+
+```go
+Create(name string) (*File, error)
+```
+
+
+经查源码得知,create方法是对OpenFile方法的封装而已.
+```go
+func Create(name string) (*File, error) {
+	return OpenFile(name, O_RDWR|O_CREATE|O_TRUNC, 0666)
+}
+```
+
+
+
+
+
+
+
+
+
 os.create,创建文件
 
 
@@ -209,5 +225,14 @@ var nums []int
 数组切片
 
 切片的三大属性--指针,长度和容量
+
+
+
+## bufio
+
+
+
+newReader
+
 
 
