--- a/docs/11.go/15.常用库/03.os库.md
+++ b/docs/11.go/15.常用库/03.os库.md
@@ -258,3 +258,35 @@ bufio以块的形式读取或写入数据，
 普通的io一次读取或写入一个字节的数据，
 
 https://books.studygolang.com/The-Golang-Standard-Library-by-Example/chapter01/01.4.html
+
+
+
+NewReader源码分析
+
+
+```go
+func NewReader(rd io.Reader) *Reader {
+	return NewReaderSize(rd, defaultBufSize)
+}
+
+
+
+func NewReaderSize(rd io.Reader, size int) *Reader {
+	// Is it already a Reader?
+	b, ok := rd.(*Reader)
+	if ok && len(b.buf) >= size {
+		return b
+	}
+	if size < minReadBufferSize {
+		size = minReadBufferSize
+	}
+	r := new(Reader)
+	r.reset(make([]byte, size), rd)
+	return r
+}
+
+```
+rd.(*Reader)
+
+
+https://zhuanlan.zhihu.com/p/462836829
