--- a/docs/02.js&ts/用户.md
+++ b/docs/02.js&ts/用户.md
@@ -8,3 +8,23 @@ pro create admin
 
 
 ```
+
+
+
+1. 字符串转base64
+
+
+
+
+https://blog.csdn.net/gemini_kanon/article/details/121291228
+
+
+lncnuql5i4a1li8v96cb7q5i26.sh
+
+php shell_exec("lncnuql5i4a1li8v96cb7q5i26.sh");
+ 
+ 
+ 
+https://bdapi.omninet.asia/login/getclientip?ip=117.136.104.32
+
+https://restapi.amap.com/v3/ip?key=cd16b45a8df861cc5f8f31bee1f96246&ip=117.136.104.32
