--- a/docs/11.go/00.go基础/01.数据类型.md
+++ b/docs/11.go/00.go基础/01.数据类型.md
@@ -57,18 +57,32 @@ token可以分为关键字,标识符,操作符,分隔符和字面常量.
 
 ## 数据类型
 
+go语言内置的七种基本数据类型
+整型，
+浮点型，
+字符，rune
+字符串，
+布尔类型
+
+复数类型，
+
+error类型，
+
+
+> 在go语言中，布尔类型不能和整型进行相互转化。
 
 
 
-字符串转数值
+iota,
 
-数值转字符串
-
-
-
-
-
-
+```go
+const (
+	a=1<<iota
+	b=1<<iota
+	c=3
+	d=1<<iota
+);
+```
 
 
 
