--- a/docs/11.go/00.go基础/21.操作符汇总.md
+++ b/docs/11.go/00.go基础/21.操作符汇总.md
@@ -45,73 +45,18 @@ token，是构成源程序的基本不可再分割的单元，
 token分隔符分为两类，一类是操作符，一类是自身没有特殊的含义。
 
 
-操作符，分隔符，
+## 位移运算
 
 
-纯分隔符，空格，制表符，换行符
-
-空格，制表符，换行符
+什么是位移运算
 
 
+唯一运算分为左移，右移，异或，
 
-go语言预声明的标识符包括--关键字，内置数据类型标识符，常量值标识符，内置函数和空白标识符。
-## 关键字
 
-是语言设计者保留的有特定语法含义的标识符。
-import,func,return,
-const,var,
-if,else,
-defer,
-struct,
-select,break;return,continue;
-if,break,switch,for,
+左移，
 
 
 
-type,
-interface,
-
-
-
-func,
-map,
-channel,
-slice,
-
-
-goto,
-
-
-var,const,
-
-
-
-
-int,uint,int32,int64,
-float32,float64,
-
-
-
-
-
-
-
-
-
-
-
-
-
-## 关键字
-import，
-func，
-return
-interface，定义接口
-struct,结构体
-map，
-chan，
-
-
-
-
+位移运算符
 
