--- a/docs/11.go/00.go基础/01.数据类型.md
+++ b/docs/11.go/00.go基础/01.数据类型.md
@@ -59,17 +59,75 @@ token可以分为关键字,标识符,操作符,分隔符和字面常量.
 
 
 
+go语言的数据类型分为7类
+1. 整型
+2. 浮点型
+3. 复数类型
+4. 字符
+4. 字符串
+6. 布尔
+7. error
+
+
+
+在go语言中完整的变量声明语法
+var 
+零值,不同类型的默认值
+
+
+
+
 
 字符串转数值
 
 数值转字符串
 
 
+## 字符串类型
+
+go语言原生支持字符串.
+
+
+常量,一旦声明,就无法变更.
+
+
+
+1. 求字符串的长度
+2. 字符串的拼接
 
 
 
 
 
 
+
+
+为什么要区分类型
+不同的类型,占用的空间不同,
+
+
+1. 变量的可见性
+2. 变量的生命周期
+3. 
+
+
+
+## 布尔类型
+
+布尔类型只有两个值,true和false,true和false是go内置的预声明标识符
+
+> 在go语言中,布尔类型和整型数据是不能相互转化的.
+
+
+
+
+## 整型
+
+rune,是系统内置的uint8的别名类型
+
+
+
+
+rune类型
 
 
