--- a/docs/11.go/00.go基础/01.数据类型.md
+++ b/docs/11.go/00.go基础/01.数据类型.md
@@ -152,3 +152,76 @@ rune,是系统内置的uint8的别名类型
 rune类型
 
 
+
+
+
+
+# 数组与切片
+
+go语言的数组的定长性和值拷贝限制了其使用场景。为了弥补数组的定长性不足，go提供了另一种数据类型slice，译为切片，是一种变长数组，其数据结构中有指向数组的指针，所以是一种引用类型。
+
+
+
+
+数组与切片的区别
+1. 数组是定长的，切片是变长
+2. 数组是值类型，切片是引用类型
+
+
+
+切片的属性
+len，元素长度，
+cap，容量
+
+len<=cap,
+
+```go title="src/slice.go"
+type slice struct {
+	array unsafe.Pointer
+	len   int
+	cap   int
+}
+```
+
+
+## 切片的创建方式
+
+1. 由数组创建
+
+[n:m],
+[n:],
+[:m],
+
+2. 通过内置函数make创建切片
+make([]int,10);
+
+需要研究事项，make函数是如何实现参数cap是可选的呢?
+
+
+len,获取切片长度
+cap,获取切片底层数组的容量，
+append，对切片追加元素
+copy，复制一个切片。
+
+
+
+
+## map类型
+map就是key-value的集合，
+
+map是引用类型，
+关于key，
+1. key是唯一的不可重复
+2. key是任意可以比较的类型
+
+什么是可以进行比较的类型。
+
+
+
+map的创建
+1. 字面量
+2. make内置函数
+
+```go
+
+```
