--- a/docs/11.go/00.go基础/文件读写.md
+++ b/docs/11.go/00.go基础/文件读写.md
@@ -1,6 +1,82 @@
 
 
 
+```go
+func main() {
+	base, _ := os.Getwd()
+	filepath := base + "/day05/readme.md"
+	file, err := os.Open(filepath)
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	defer file.Close()
+
+	buf := make([]byte, 128)
+	nums, err := file.Read(buf[:])
+	if err != nil {
+		fmt.Println(err)
+		return
+	}
+	fmt.Println(nums, string(buf))
+}
+```
+
+上述代码，实现了从文件中读取128字节的数据，如果文件较大，内容多于128字节怎么呢?那无非是重复当前操作，直到读取到文件末尾即可，很容易的会想到使用循环，go语言中循环只有for，也省去了选择的余地。
+
+不过这里有一个注意点--如何判断是否读取到了文件末尾呢?
+
+> 可通过io.EOF来判断，io.EOF是什么呢?
+
+
+
+```go title="io.go"
+// EOF is the error returned by Read when no more input is available.
+// (Read must return EOF itself, not an error wrapping EOF,
+// because callers will test for EOF using ==.)
+// Functions should return EOF only to signal a graceful end of input.
+// If the EOF occurs unexpectedly in a structured data stream,
+// the appropriate error is either [ErrUnexpectedEOF] or some other error
+// giving more detail.
+var EOF = errors.New("EOF")
+```
+
+
+EOF是end-of-file的缩写，表示文件到末尾了。
+
+通过查看源码可知，EOF其实就是go语言内置的一个由errors.New方法生成的一个错误信息常量
+
+为什么不用const关键字来定义EOF呢?即为什么不把EOF定义为常量呢?，于是自己新建一个demo文件，运行了一下，结果发现问题：
+```go title="demo.go"
+func main() {
+	const EOF = errors.New("EOF")
+
+	fmt.Println(EOF)
+}
+```
+
+day05\demo10.go:9:14: errors.New("EOF") (value of type error) is not constant
+
+上面说到，EOF是利用errors包下的New方法生成一个错误信息，
+
+> go语言中的常量仅支持基本数据类型--int，float，bool，string，nil
+
+
+value of type error) is not constant
+
+
+涉及到的知识点：
+1. os.Getwd()，获取当前工作目录
+2. os.Open,打开文件
+3. file.read
+4. append,
+
+
+file是什么
+
+
+
+
 
 ## file.read方法
 
