--- a/docs/11.go/00.go基础/03.函数.md
+++ b/docs/11.go/00.go基础/03.函数.md
@@ -1,6 +1,46 @@
 
 
-## 位运算
+## 函数的定义
+
+
+## 参数传递
+
+实参到形参的传递永远是值拷贝，
+
+
+
+
+## 参数
+
+### 参数的传递方式--永远都是值拷贝
+### 不定参数
+
+1. 不定参数的类型必须是相同的。
+2. 必须是最后一个参数
+3. 切片进行收集
+
+
+是否有思考过fmt.Println()方法为啥可以接收任意个任意类型的参数呢?
+
+```go title="print.go"
+// Println formats using the default formats for its operands and writes to standard output.
+// Spaces are always added between operands and a newline is appended.
+// It returns the number of bytes written and any write error encountered.
+func Println(a ...any) (n int, err error) {
+	return Fprintln(os.Stdout, a...)
+}
+```
+
+通过查看println方法源码可知，其底层就是接受不定长的any类型的参数。
+
+关于any类型
+```go
+type any = interface{}
+```
+
+any类型其实就是空接口，是go1.18新增的特性。
+
+
 
 
 
