--- a/docs/02.js&ts/01.es5/文件上传.md
+++ b/docs/02.js&ts/01.es5/文件上传.md
@@ -41,3 +41,118 @@ https://juejin.cn/post/6844903757654786061
 
 在原始表单时，有文件和普通表单数据时，不是需要设置，怎么到了fetch设置还错了呢?
 
+
+
+
+
+# 多文件上传
+
+<input type="file" multiple >
+
+
+
+
+
+## 
+
+```js
+export const get = (path, params = null) => {
+  if (params !== null) {
+    path = domain(path, params);
+  }
+
+  return new Promise((resolve, reject) => {
+    fetch(path)
+      .then(res => {
+        return res.json();
+      })
+      .then(res => {
+        resolve(res);
+      })
+      .catch(res => {
+        reject(res);
+      });
+  });
+};
+
+export const post = (path, data = null) => {
+  const formdata = new FormData();
+  if (data !== null) {
+    for (const key of Object.keys(data)) {
+      formdata.append(key, data[key]);
+    }
+  }
+  return new Promise((resolve, reject) => {
+    fetch(path, {
+      method: 'POST',
+      body: formdata
+    })
+      .then(res => {
+        if (res.ok) {
+          console.log('common--1111');
+          return res.json();
+        } else {
+          console.log('common--222');
+          reject(res);
+        }
+      })
+      .then(res => {
+        console.log('common--333');
+        resolve(res);
+      })
+      .catch(res => {
+        console.log('common--444');
+        reject(res);
+      });
+  });
+};
+
+export const uploadfile = (inputfile, params = null) => {
+  let nums = 0;
+  const formdata = new FormData();
+  if (inputfile.files.length > 0) {
+    for (const file of inputfile.files) {
+      if (['image/png', 'image/jpeg'].includes(file.type)) {
+        formdata.append('file[]', file);
+        nums++;
+      }
+    }
+  }
+  return new Promise((resolve, reject) => {
+    if (nums == 0) {
+      reject('请选择图片类型');
+    }
+    if (params !== null) {
+      for (const key of Object.keys(params)) {
+        formdata.append(key, params[key]);
+      }
+    }
+    fetch('/commons/uploadfile', {
+      method: 'POST',
+      body: formdata
+    })
+      .then(res => {
+        if (res.ok) {
+          return res.json();
+        } else {
+          reject(res);
+        }
+      })
+      .then(res => {
+        resolve(res);
+      })
+      .catch(res => {
+        reject(res);
+      });
+  });
+};
+
+function domain(path, params) {
+  const ourl = new URL(window.location);
+  console.log(ourl);
+  ourl.path = path;
+  ourl.pathname = path;
+  ourl.search = decodeURIComponent(new URLSearchParams(params).toString());
+  return ourl.toString();
+}
+```
